--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@ header {
   display: block;
   border-radius: 10px;
 }
+    .breadcrumb {
+  font-size: 14px;
+  margin: 8px 0;
+}
+
+.breadcrumb a {
+  text-decoration: none;
+  color: #ff0000; /* warna merah */
+}
+
+.breadcrumb span {
+  margin: 0 5px;
+  color: #ff0000;
+}
     /* Reset dasar */
     * {
       margin: 0;
@@ -284,6 +298,11 @@ header {
   </div>
 
   <!-- Section Berita -->
+  <div class="breadcrumb">
+  <a href="index.html">Beranda</a>
+  <span>›</span>
+  <span>Daftar Berita Terbaru</span>
+</div>
   <section id="berita">
     <h1 style="font-size: 20px;">Daftar Berita Terbaru</h1>
 
