--- a/index.html
+++ b/index.html
@@ -5,6 +5,74 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KUA Prajekan</title>
   <style>
+    .menu-utama {
+    position: relative;
+    width: 100%;
+    height: 380px; /* 👉 Tinggi bisa kamu ubah sesuka hati */
+    background-image: url('img/menu-utama.jpg'); /* Ganti dengan fotomu */
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    overflow: hidden;
+  }
+
+  /* Overlay gelap agar teks terlihat */
+  .menu-utama::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.4);
+  }
+
+  .menu-isi {
+    position: relative;
+    z-index: 2;
+    max-width: 90%;
+    animation: slideDown 1.2s ease-out;
+  }
+
+  .menu-isi h1 {
+    font-size: 32px;
+    margin: 0 0 10px 0;
+    font-weight: bold;
+  }
+
+  .menu-isi p {
+    font-size: 18px;
+    margin: 0 0 20px;
+  }
+
+  .menu-isi .tombol {
+    display: inline-block;
+    padding: 12px 25px;
+    background: #035d9b;
+    color: white;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+
+  .tombol:hover {
+    background: #ffcc00;
+    color: black;
+  }
+
+  /* Animasi turun */
+  @keyframes slideDown {
+    from {
+      opacity: 0;
+      transform: translateY(-30px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
     .judul h1,
     .judul p {
       font-weight: bold;
@@ -66,6 +134,7 @@
   font-size: 16px;
   color: white; /* ubah sesuai kebutuhan */
 }
+    
     /* ======= STYLE HEADER ======= */
 header {
   display: flex;
@@ -228,6 +297,14 @@ header {
 <body>
   
   <header>
+    <div class="menu-utama">
+  <div class="menu-isi">
+    <h1>Selamat Datang di KUA Prajekan</h1>
+    <p>Kantor Urusan Agama Kecamatan Prajekan • Kabupaten Bondowoso</p>
+    <a href="#profil" class="tombol">Lihat Profil</a>
+  </div>
+</div>
+
     <div class="logo">
     <img src="Lambang Kemenag.png" alt="Ikhlas Beramal">
   </div>
